# vibin

./: .gitignore  BuildOpt.md  Cargo.toml  README.md  build.gradle.kts  config.vibin.json  gradle.properties  settings.gradle.kts
src/: gui.rs  main.rs  rustav.rs  staticdata.rs
src/main/kotlin/marais/vibin/: App.kt  Config.kt
src/test/kotlin/marais/vibin/: AppTest.kt
