[package]
name = "vibin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20"
egui = "0.20"
image = { version = "0.24", default-features = false, features = ["gif"] }
kira = { version = "0.7" }
object = { version = "0.30", default-features = false, features = ["read_core", "pe", "write_std"] }

[features]
default = ["bundle-gif-cat"]
# Bundle the cat gif
bundle-gif-cat = []

[profile.dev.package.'*']
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
