[package]
name = "vibin"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
softbuffer = "0.2"
image = { version = "0.24", default-features = false, features = ["gif"] }
kira = { version = "0.7" }
mutself = { version = "0.1", path = "../mutself" }

[target.'cfg(windows)'.dependencies]
object = { version = "0.31", default-features = false, features = ["read_core", "write_std", "pe"] }

[target.'cfg(unix)'.dependencies]
object = { version = "0.31", default-features = false, features = ["read_core", "write_std", "elf"] }

[features]
default = ["bundle-gif-cat"]
# Bundle the cat gif
bundle-gif-cat = []

[profile.dev.package.'*']
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
